# KYC-Intelligence-System

./: .env.example  .gitignore  .pre-commit-config.yaml  DESIGN_DECISIONS.md  LICENSE  README.md  batch.py  config.py  constants.py  dispatch.py  evidence_store.py  logger.py  main.py  models.py  monitoring.py  pipeline.py  pipeline_checkpoint.py  pipeline_investigation.py  pipeline_metrics.py  pipeline_reports.py  pipeline_review.py  pipeline_synthesis.py  pyproject.toml  requirements.txt  risk_config.yaml  risk_config_loader.py  run_all_cases.py  schema_migration.py
agents/: __init__.py  adversarial_reviewer.py  adverse_media_base.py  base.py  business_adverse_media.py  entity_sanctions.py  entity_verification.py  individual_adverse_media.py  individual_sanctions.py  jurisdiction_risk.py  kyc_synthesis.py  pep_detection.py  transaction_monitoring.py
generators/: __init__.py  aml_operations_brief.py  brief_helpers.py  case_package.py  dedup.py  evidence_classifier.py  excel_export.py  markdown_utils.py  onboarding_summary.py  pdf_generator.py  recommendation_engine.py  regulatory_actions_brief.py  regulatory_filing.py  risk_assessment_brief.py  sar_narrative.py  ubo_helpers.py
prompts/: adversarial_reviewer.txt  business_adverse_media.txt  entity_sanctions.txt  entity_verification.txt  individual_adverse_media.txt  individual_sanctions.txt  jurisdiction_risk.txt  kyc_synthesis.txt  pep_detection.txt  transaction_monitoring.txt
test_cases/: case4_individual_gray.json  case5_sparse_data.json  case6_common_name.json  case7_adversarial.json
tests/: conftest.py  test_adversarial.py  test_agent_parsing.py  test_agent_resilience.py  test_case_package.py  test_config.py  test_constants.py  test_cost_modeling.py  test_cross_check_logic.py  test_display_fixes.py  test_evidence_completeness.py  (+27 more)
(+26 files in other folders)
